<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textview_info_musician"
        style="@style/textview_info"
        android:text="@string/info_search" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/musician"
            style="@style/childpage_button_style"
            android:background="@color/musician_backgroundcolor"
            android:onClick="openMusicianPage"
            android:text="@string/musician" />

        <TextView
            android:id="@+id/record"
            style="@style/childpage_button_style"
            android:background="@color/record_backgroundcolor"
            android:onClick="openRecordPage"
            android:text="@string/record" />

        <TextView
            android:id="@+id/playlist"
            style="@style/childpage_button_style"
            android:background="@color/playlist_backgroundcolor"
            android:onClick="openPlaylistPage"
            android:text="@string/playlist" />
    </LinearLayout>

    <TextView
        android:id="@+id/homepage"
        style="@style/childpage_button_style"
        android:background="@color/homepage_backgroundcolor"
        android:onClick="openHomePage"
        android:text="@string/homepage" />

</LinearLayout>