<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/button_search"
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_button_height"
        android:layout_margin="@dimen/button_margin"
        android:background="@color/search_button_backgroundcolor"
        android:text="@string/search_button_text"
        android:textAllCaps="false"
        android:textColor="@color/search_button_text_color" />

    <TextView
        android:id="@+id/textview_info_record"
        style="@style/textview_info"
        android:text="@string/info_playlist" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/homepage"
            style="@style/childpage_button_style"
            android:background="@color/homepage_backgroundcolor"
            android:onClick="openHomePage"
            android:text="@string/homepage" />

        <TextView
            android:id="@+id/musician"
            style="@style/childpage_button_style"
            android:background="@color/musician_backgroundcolor"
            android:onClick="openMusicianPage"
            android:text="@string/musician" />

        <TextView
            android:id="@+id/record"
            style="@style/childpage_button_style"
            android:background="@color/record_backgroundcolor"
            android:onClick="openRecordPage"
            android:text="@string/record" />
    </LinearLayout>

</LinearLayout>